--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile "org.mybatis:mybatis:$mybatisVersion"
     compile "org.mybatis:mybatis-spring:1.2.2"
     compile "com.alibaba:druid:1.0.2"
-    compile "org.codeHaus.jackson:jackson-mapper-asl:1.9.13"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.7.1"
     compile "log4j:log4j:1.2.17"
     runtime "org.slf4j:slf4j-log4j12:1.7.7"
 	
